# AgentFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DESIGN_DOC.md  Dockerfile  LICENSE  PRD.md  Procfile  README.md  TECH_STACK.md  UI_DESIGN.md  audit.md  blog_post_devto.md  docker-compose.yml  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml  test_code.py
.github/workflows/: ci.yml
agentflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: auth.py  constants.py  dependencies.py  llm.py  logging_config.py  main.py  security.py  settings.py  validation.py
backend/graph/: agents.py  blog_agent.py  build_graph.py  human_review.py  memory_nodes.py  messages.py  router.py  security.py  state.py  synthesizer.py  tools.py
backend/memory/: __init__.py  ltm.py  stm.py
backend/rag/: ingest.py
backend/routers/: admin.py  auth.py  chat.py  health.py  threads.py  upload.py
backend/vectorstore/: __init__.py  qdrant_store.py
data/: users.json
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  ErrorBoundary.jsx  LoginScreen.jsx  auth.js  constants.js  index.css  main.jsx  sseParser.js  utils.js
frontend/tests/: ChatInput.test.jsx  MessageBubble.test.jsx  SourceChips.test.jsx  useSSE.test.jsx
ltm_indexes/37a8eec1ce19687d132fe29051dca629d164e2c4958ba141d5f4133a33f0688f/: index.faiss  index.pkl  index.pkl.hmac
ltm_indexes/admin/: index.faiss  index.pkl  (+1 more)
tests/: conftest.py  test_api.py  test_api_blog.py  test_api_delete.py  test_eval.py  test_graph.py  test_memory.py  test_messages.py  test_router.py  test_tools.py
(+13 files in other folders)
