[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.8.0"
description = "A multi-agent RAG application using FastAPI, LangGraph, and React"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Nithin", email = "nithin@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langgraph",
    "faiss-cpu",
    "pypdf",
    "aiosqlite",
    "langgraph-checkpoint-postgres",
    "asyncpg",
    "psycopg[binary]",
    "gunicorn",
    "python-multipart",
    "slowapi",
    "pyjwt",
    "bcrypt",
    "pydantic-settings",
    "structlog",
    "langchain-core",
    "langchain-community",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-tavily",
    "fastembed",
    "langgraph-checkpoint-sqlite",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio~=0.24.0",
    "httpx"
]

[tool.setuptools.packages.find]
include = ["backend*"]
